--- a/pizzas/templates/pizzas/pizza.html
+++ b/pizzas/templates/pizzas/pizza.html
@@ -8,11 +8,37 @@
     {% for t in toppings %}
     <li> 
         <p>{{t.name|linebreaks}}</p>
+        <p>
+            <a href="{% url 'pizzas:edit_topping' t.id %}">Edit topping</a>
+        </p>
     </li>
     {% empty %}
-    <li> There are no entries for this pizza yet yet.</li>
+    
+    <li> no toppings for this yet.</li>
+    
     {% endfor %}
 </ul>
+<p>
+    <a href="{% url 'pizzas:new_topping' pizza.id %}">Add a new topping</a>
+</p>
+<ul>
 
+    {% for comment in comments %}
+    <li>
+        <p> {{ comment.name|linebreaks }}</p>
+    </li>
+    {% empty %}
+
+    <li>No comments for this pizza have been added yet.</li>
+
+    {% endfor %}
+
+    </li>
+
+</ul>
+
+<p>
+    <a href="{% url 'pizzas:new_comment' pizza.id %}">Add a new comment</a>
+</p>
 
 {% endblock content %} 
