--- a/pizzas/templates/pizzas/pizzas.html
+++ b/pizzas/templates/pizzas/pizzas.html
@@ -1,23 +1,23 @@
 {% extends "pizzas/base.html" %}
+{% block page_header %}
+    <h1>Pizzas</h1>
+{% endblock page_header %}
 
 
 {% block content %}
-
-<p>Pizzas</p>
-
 <ul>
     {% for pizza in pizzas %}
 
-    <li>
+    <li><h3>
         <a href="{% url 'pizzas:pizza' pizza.id %}">{{ pizza }}</a>
-    </li>
+    </h3></li>
 
     {% empty %}
-    <li> No pizzas Have been added yet.</li>
+    <li><h3> No pizzas Have been added yet.</h3></li>
 
     {% endfor %}
 </ul>
-<a href="{% url 'pizzas:new_pizza' %}">Add a new pizza</a>
+<h3><a href="{% url 'pizzas:new_pizza' %}">Add a new pizza</h3></a>
 
 
 {% endblock content %}
