--- a/pizzas/templates/pizzas/index.html
+++ b/pizzas/templates/pizzas/index.html
@@ -9,3 +9,8 @@
 &raquo;</a>
 </div>
 {% endblock page_header %}
+{% block content %}
+<p>
+<img class="img-responsive" src="https://pngimg.com/uploads/pizza/pizza_PNG7133.png">
+</p>
+{% endblock content %}
