--- a/pizzas/templates/pizzas/new_pizza.html
+++ b/pizzas/templates/pizzas/new_pizza.html
@@ -4,9 +4,10 @@
 {% block content %}
 <p>Add a new pizza:</p>
 
-<form action="{% url 'pizzas:new_pizza' %}" method='post'>
+<form action="{% url 'pizzas:new_pizza' %}" method='post' enctype="multipart/form-data">
 
     {% csrf_token %}
+    {{ form.media }}
     {{ form.as_p }}
 
     <button name="submit">Add pizza</button>
